[package]
name = "pallet-precompiles-benchmark"
description = "A pallet whose purpose is to benchmark precompile calls"
version = "0.1.0"
homepage = "https://freeverse.io"
edition = "2021"
license = "MIT-0"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
frame-benchmarking = { optional = true, workspace = true }
sp-std = { workspace = true }
fp-evm = { workspace = true }
precompile-utils = { workspace = true, default-features = false }
pallet-evm = { workspace = true }
pallet-vesting ={ workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-runtime = { workspace = true }
precompile-utils = { workspace = true, features = ["testing"] }
pallet-balances = { workspace = true, features = ["std", "insecure_zero_ed"] }
pallet-timestamp = { workspace = true }
hex = { workspace = true }
test-utils = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
    "sp-core/std",
	"sp-runtime/std",
	"frame-benchmarking?/std",
	"sp-std/std",
	"fp-evm/std",
	"precompile-utils/std",
	"pallet-evm/std",
	"pallet-vesting/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]