[package]
name = "pallet-evm-evolution-collection"
version = "2.0.0-dev"
description = "Collection evolver and minter precompile"
repository = "https://github.com/freeverseio/laos"
edition = "2021"

[dependencies]
pallet-evm = { workspace = true }

# Substrate
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
fp-evm = { workspace = true }
frame-support = { workspace = true }

# Frontier precompile utils
precompile-utils = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	# Frontier
	"pallet-evm/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"fp-evm/std",
	"frame-support/std",
	"precompile-utils/std",
]
