[package]
name = "pallet-evm-evolution-collection"
version = "2.0.0-dev"
description = "Collection evolver and minter precompile"
repository = "https://github.com/freeverseio/laos"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
pallet-evm = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }

# Substrate
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
fp-evm = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-laos-evolution = { workspace = true }

# Frontier precompile utils
precompile-utils = { workspace = true, default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std", "insecure_zero_ed"] }
pallet-timestamp = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	# Frontier
	"pallet-evm/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"precompile-utils/std",
	"pallet-laos-evolution/std",
	"scale-info/std",
]
