[package]
name = "laos-runtime"
edition = "2021"
version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
hex-literal = { workspace = true }
hex = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
smallvec = { workspace = true } 
log = { workspace = true }
num_enum = { workspace = true }

# Runtime primitives
laos-primitives = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
pallet-aura = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true , features = ["insecure_zero_ed"] }
pallet-message-queue = { workspace = true }
pallet-multisig = { workspace = true }
pallet-session = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-vesting = { workspace = true }
pallet-proxy = { workspace = true }
pallet-utility = { workspace = true }
sp-api = { workspace = true }
sp-io = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-slots = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-staking = { workspace = true }
sp-weights ={ workspace = true }
sp-genesis-builder ={ workspace = true }

pallet-asset-metadata-extender = { workspace = true }
pallet-laos-evolution = { workspace = true }
pallet-parachain-staking = { workspace = true }
pallet-precompiles-benchmark = { workspace = true }


# Polkadot
pallet-xcm = { workspace = true }
polkadot-runtime-common = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
staging-xcm = { workspace = true }
staging-xcm-builder = { workspace = true }
staging-xcm-executor = { workspace = true }

# Cumulus
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-session-benchmarking = { workspace = true, optional = true}
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
cumulus-primitives-utility = { workspace = true }
staging-parachain-info = { workspace = true }
parachains-common = { workspace = true }

# Frontier
fp-evm = { workspace = true }
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true, features = ["serde"] }

# Frontier FRAME
pallet-base-fee = { workspace = true }
pallet-evm = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-evm-chain-id = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
pallet-evm-precompile-bn128 = { workspace = true }
pallet-evm-precompile-blake2 = { workspace = true }
pallet-evm-precompile-parachain-staking = { workspace = true }

precompile-utils = { workspace = true }

[dev-dependencies]
precompile-utils = { workspace = true, features = ["testing"] }
evm = { workspace = true }
# TODO This code has been commented out when upgrading polkadot-sdk from v1.1.0 to 1.6.0
# because conflicts with orml-trait crate and currently XCM is not used. It should be
# uncommented and fixed when XCM is used in the runtime.
# orml-traits = { workspace = true }
# orml-xtokens = { workspace = true, features = ["std"] }
# orml-xcm-support = { workspace = true, features = ["std"] }
polkadot-runtime-parachains = { workspace = true }
pallet-assets = { workspace = true }
test-utils = { workspace = true }
ethereum = { workspace = true }

[features]
default = [
	"std",
]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"pallet-message-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"parachains-common/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-laos-evolution/std",
	"pallet-asset-metadata-extender/std",
	"pallet-multisig/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-vesting/std",
	"pallet-precompiles-benchmark/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"staging-parachain-info/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-io/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-weights/std",
	"sp-genesis-builder/std",
	"staging-xcm-builder/std",
	"staging-xcm-executor/std",
	"staging-xcm/std",
	"substrate-wasm-builder",
	# Frontier
	"fp-evm/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	# Frontier FRAME
	"pallet-base-fee/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-chain-id/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-bn128/std",
	"pallet-evm-precompile-blake2/std",	
	"pallet-evm-precompile-parachain-staking/std",	
	"cumulus-pallet-session-benchmarking?/std",
	"frame-benchmarking?/std",
	"frame-system-benchmarking?/std",
	"frame-try-runtime?/std",
	# Bridge deps,
	"laos-primitives/std",
	"hex/std",
	"pallet-parachain-staking/std",
	"log/std",
	"sp-consensus-slots/std",
	"sp-staking/std",
	"pallet-utility/std",
	"pallet-proxy/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-laos-evolution/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"staging-xcm-builder/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"staging-xcm-executor/runtime-benchmarks",
	"pallet-asset-metadata-extender/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-precompiles-benchmark/runtime-benchmarks",
	"pallet-parachain-staking/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"pallet-message-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-laos-evolution/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"staging-parachain-info/try-runtime",
	"pallet-evm/try-runtime",
	"pallet-evm-chain-id/try-runtime",
	"pallet-ethereum/try-runtime",
  	"pallet-base-fee/try-runtime",
	"fp-self-contained/try-runtime",
	"frame-support/try-runtime",
	"polkadot-runtime-common/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-asset-metadata-extender/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-precompiles-benchmark/try-runtime",
	"pallet-parachain-staking/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-utility/try-runtime",
]
