[package]
name = "bp-laos-evolution"
description = "Bridge primitives of LAOS evolution chain."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
# Core primitives
evochain-primitives = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

bp-header-chain = { workspace = true, default-features = false }
bp-messages = { workspace = true, default-features = false }
bp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"bp-header-chain/std",
	"bp-messages/std",
	"bp-runtime/std",
	"evochain-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
