[package]
name = "bp-laos-ownership"
description = "Bridge primitives of LAOS ownership parachain"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
bp-bridge-hub-cumulus = { workspace = true, default-features = false }
bp-messages = { workspace = true, default-features = false }
bp-polkadot-core = { workspace = true, default-features = false }
bp-runtime = { workspace = true, default-features = false }
bp-header-chain = { workspace = true, default-features = false }

# Ownership parachain Primitives
ownership-parachain-primitives = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-bridge-hub-cumulus/std",
	"bp-header-chain/std",
	"bp-messages/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"ownership-parachain-primitives/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
