[package]
name = "relay-laos-evolution-client"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", workspace = true }

# Laos Evolution dependencies
bp-laos-evolution = { workspace = true }
laos-evolution-runtime = { workspace = true }

# Bridge dependencies
bp-runtime = { workspace = true }
relay-common = { workspace = true }

# Substrate dependencies
fp-self-contained = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
relay-substrate-client = { workspace = true }
relay-utils = { workspace = true }
