[package]
name = "relay-laos-ownership-client"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { workspace = true, package = "parity-scale-codec" }
scale-info = { workspace = true }
subxt = { workspace = true }

bp-bridge-hub-cumulus = { workspace = true }
bp-header-chain = { workspace = true }
bp-messages = { workspace = true }
bp-polkadot-core = { workspace = true }
bp-runtime = { workspace = true }
frame-support = { workspace = true }
fp-self-contained = { workspace = true }
relay-substrate-client = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }

bp-laos-evolution = { workspace = true }
bp-laos-ownership = { workspace = true }
